# v-contractx

./: .gitignore  Cargo.toml  README.md
docs/: PROJECT_FLOW.md
examples/: default_stake.json
python/: pyproject.toml  simulate_projection.py
sdk-ts/: README.md  package.json  tsconfig.json
sdk-ts/src/: client.ts  contracts.ts  index.ts  types.ts
sdk-ts/ui/: ProjectionPanel.tsx  useProjectionPreview.ts
src/: access.rs  certification.rs  contract.rs  errors.rs  lib.rs  projection.rs  reconstruction.rs  record.rs  runtime.rs  types.rs  utils.rs  wasm.rs
tests/: projection_reconstruction.rs
wasm/: Cargo.toml  README.md
wasm/src/: lib.rs
