[package]
name = "v-contractx"
version = "0.1.0"
edition = "2021"
license = "MIT"

[lib]
name = "v_contractx"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = ["std"]
std = []
wasm = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
blake3 = "1"
hex = "0.4"

[dev-dependencies]
pretty_assertions = "1"
